--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -262,7 +262,8 @@ fields:
   - Have you ever been known by a different name?: users[0].aliases.there_are_any
     datatype: yesnoradio
   - note: |
-      OK, we'll get the other names you used on the next screen.  
+      OK, we'll get the other names you used on the next screen.
+    show if: users[0].aliases.there_are_any
   - Country of Birth: users[0].country_of_birth
     input type: dropdown
     code: |
@@ -302,6 +303,7 @@ fields:
     datatype: yesnoradio
   - note: |
       OK, we'll get the other names you used on the next screen.
+    show if: users[i].aliases.there_are_any
   - Country of Birth: users[i].country_of_birth
     code: |
       uscis_countries_list()
